--- a/status.html
+++ b/status.html
@@ -23,13 +23,13 @@
 </div>
 
 <div class="center">
-    <div class="">
+    <div class="center">
         <button class="btn success">Closed</button>
     </div>
-    <div class="">
+    <div class="center">
         <button class="btn info">Pending</button>
     </div>
-    <div class="">
+    <div class="center">
         <button class="btn warning">KIV</button>
     </div>
 </div>
