--- a/closed.html
+++ b/closed.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Status</title>
+<title>Closed Complaints List</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/styles.css" /> 
+<link rel="stylesheet" type="text/css" href="css/styles.css"> 
 </head>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <body>
 
 <div class="header">
   <h1>New Era College Complaint System</h1>
-  <p>Status</p>
+  <p>Closed Complaints List</p>
 </div>
 
 <div class="navbar">
@@ -23,9 +24,16 @@
 </div>
 
 <div class="center">
-    
+  <div class="center">
+    <a href="#"><button class="btn success">Closed Complaints</button></a>
+  </div>
+  <div class="center">
+    <a href="#"><button class="btn info">Pending Complaints</button></a>
+  </div>
+  <div class="center">
+    <a href="#"><button class="btn warning">KIV Complaints</button></a>
+  </div>
 </div>
-                
 
 <div class="footer">
   <p>Copyright New Era University College 2022</p>
