--- a/status.html
+++ b/status.html
@@ -24,13 +24,13 @@
 
 <div class="center">
     <div class="center">
-      <a href="#"><button class="btn success">Closed</button></a>
+      <a href="#"><button class="btn success">Closed Complaints</button></a>
     </div>
     <div class="center">
-      <a href="#"><button class="btn info">Pending</button></a>
+      <a href="#"><button class="btn info">Pending Complaints</button></a>
     </div>
     <div class="center">
-      <a href="#"><button class="btn warning">KIV</button></a>
+      <a href="#"><button class="btn warning">KIV Complaints</button></a>
     </div>
 </div>
                 
